--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py24, py25, py26, py27
+envlist = py24, py25, py26, py27, py34
 
 [testenv]
 commands = python test_redef.py
